fix scrollbars appearing in Chrome

--- a/style.scss
+++ b/style.scss
@@ -72,6 +72,10 @@ $z-menu: 9;
   padding: 0;
 }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 html {
   width: 100%;
   height: 100%;
